# carla-scenario-bridge

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  justfile
data/: .gitignore
docs/: README.md
docs/design/: architecture.md  ssv2-launch-configuration.md  ssv2-protocol.md
docs/roadmap/: 1-core-zmq-adapter.md  2-autoware-integration.md  3-npc-pedestrian-support.md  4-traffic-lights-environment.md  5-hardening-awf-contribution.md  README.md
scenarios/: town01_ego_drive.xosc
scripts/: download_maps.sh  test_phase1.py  test_phase2.py
src/carla_scenario_bridge/: Cargo.toml  build.rs  package.xml
src/carla_scenario_bridge/config/: bridge_config.yaml
src/carla_scenario_bridge/launch/: carla_scenario_bridge.launch.xml
src/carla_scenario_bridge/src/: coordinate_conversion.rs  coordinator.rs  entity_manager.rs  main.rs  proto.rs  traffic_light_mapper.rs  zmq_server.rs
src/csb_launch/: CMakeLists.txt  package.xml
src/csb_launch/launch/: carla_scenario.launch.xml  demo.launch.xml
