<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>csb_launch</name>
  <version>0.1.0</version>
  <description>Launch files for carla-scenario-bridge demos</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>carla_scenario_bridge</exec_depend>
  <exec_depend>acb_bridge</exec_depend>
  <exec_depend>acb_launch</exec_depend>
  <exec_depend>scenario_test_runner</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
